--- a/estilo/style.css
+++ b/estilo/style.css
@@ -85,7 +85,7 @@ header > p{
     padding-left: 10px;
     padding-right: 10px;
     margin: auto;
-    padding: 20px;
+    padding-bottom: 20px;
     text-shadow: 2px 2px 5px rgb(0, 0, 0);
 }
 
