--- a/estilo/style.css
+++ b/estilo/style.css
@@ -81,6 +81,7 @@ header > p{
     color: white;
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
+    width: 100%;
     max-width: 600px;
     padding-left: 10px;
     padding-right: 10px;
